--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
 	"name": "chapter4-building-blockchain-projects",
 	"dependencies": {
-		"express": "4.14.0",
-		"web3": "0.16.0",
-		"socket.io": "1.6.0"
+		"body-parser": "^1.19.0",
+		"crypto-js": "^3.1.9-1",
+		"express": "^4.16.4",
+		"node-rsa": "^1.0.5",
+		"socket.io": "1.6.0",
+		"web3": "0.16.0"
 	}
 }
