--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
 	"dependencies": {
 		"body-parser": "^1.19.0",
 		"crypto-js": "^3.1.9-1",
-		"express": "^4.16.4",
+		"express": "^4.17.1",
+		"ipfs": "^0.36.4",
 		"node-rsa": "^1.0.5",
 		"socket.io": "1.6.0",
-		"web3": "0.16.0"
+		"web3": "^0.16.0"
 	}
 }
